fixing about me section on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ a {
     padding-bottom: 1rem;
     text-transform: uppercase;
     font-family: var(--name-font), 'Barlow', sans-serif;
-    font-size: 3vw;
+    font-size: 8vw;
     color: var(--main-color);
     letter-spacing: .6rem;
 }
@@ -365,7 +365,7 @@ a {
 
 
 .sound-design-title {
-    font-size: 3vw;
+    font-size: 8vw;
     color: var(--black);
     margin-bottom: 3rem;
     text-transform: uppercase;
@@ -456,6 +456,7 @@ a {
 .about-content {
     display: flex;
     padding-bottom: 5vh;
+    align-items: center;
 }
 
 .about-text {
@@ -505,9 +506,154 @@ a {
     }
 }
 
-@media screen and (max-width:768px) {
+/* about me pictures  */
+
+.pictures-of-me {
+    position: relative;
+}
+
+.tree-meg-img {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: auto;
+    max-width: 800px;
+    z-index: 4;
+    padding: .3em;
+    border-style: solid;
+    border-width: .3em;
+    border-color: var(--main-color); 
+}
+
+.goth-meg-img {
+    display: none;
+    width: 100%;
+    height: auto;
+    max-width: 360px;
+    padding: .3em;
+    transform: rotate(2deg);
+    border-style: solid;
+    border-width: .3em;
+    border-color: var(--main-color); 
+}
+
+.transparent-img {
+    display: none;
+    opacity: 0;
+    width: 100%;
+    height: auto;
+    max-width: 360px;
+    padding: .6em;
+}
+
+.shark-jinx-img {
+    display: none;
+    position: absolute;
+    top: -4vh;
+    left: 20vw;
+    width: 100%;
+    height: auto;
+    max-width: 360px;
+    transform: rotate(-12deg);
+    padding: .3em;
+    border-style: solid;
+    border-width: .3em;
+    border-color: var(--main-color); 
+    z-index: 99;
+}
+
+.me-doodle {
+    display: none;
+    position: absolute;
+    top: -25vh;
+    left: 31vw;
+    height: 40vh;
+    transform: rotate(7deg);
+    z-index: 999;
+}
+
+@media screen and (max-width: 1610px) {
+    .tree-meg-img {
+        max-width: 700px;
+        top: -4vh;
+    }
+}
+
+@media screen and (max-width: 1540px) {
+    .me-doodle {
+        top: -21vh;
+        left: 34vw;
+        height: 32vh;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .tree-meg-img {
+        max-width: 680px;
+        top: -1vh;
+    }
+    .about-text {
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (max-width:1400px){
+    .goth-meg-img {
+        max-width: 320px;
+    }
+    .transparent-img {
+        max-width: 320px;
+    }
+    .shark-jinx-img {
+        top: -2vh;
+        left: 18vw;
+        max-width: 320px;
+    }
+
+    .me-doodle {
+    top: -15vh;
+    left: 33vw;
+    height: 25vh;
+    transform: rotate(0deg);
+    }
+}
+
+@media screen and (max-width: 1370px) {
+    .tree-meg-img {
+        max-width: 620px;
+        top: -4vh;
+    }
+    .about-text {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 1290px) {
+    .tree-meg-img {
+        max-width: 600px;
+        top: -2vh;
+    }
+    .about-text h2 {
+        line-height: 2rem;
+    }
+}
+
+@media screen and (max-width: 1030px) {
+    .tree-meg-img {
+        max-width: 470px;
+        top: -4vh;
+    }
+    .about-text {
+        font-size: 16px;
+    }
+    .about-text h2 {
+        line-height: 1.5rem;
+    }
+}
+
+@media screen and (max-width:775px) {
     .about-title {
-        font-size: 7vw;
+        font-size: 8vw;
     }
     .about-list-playing {
         padding-right: 2rem;
@@ -517,15 +663,70 @@ a {
         padding-left: 2rem;
     }
     .about-content {
+        display: grid;
         width: 100%;
     }
+    .pictures-of-me {
+        grid-row-start: 1;
+        display: inline-grid;
+    }
+    .tree-meg-img {
+        max-width: 690px;
+        top: 0;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .jinxMode .goth-meg-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-text {
+        max-width: 90%;
+        padding-right: 5vw;
+        padding-left: 5vw;
+        font-size: 1rem;
+        padding-top: 3vh;
+    }
     .about-text h2 {
-        /* font-size: 1.1rem; */
         letter-spacing: .15rem;
         padding-bottom: .3rem;
+        line-height: 1.8rem;
     }
     .about-below-text {
         font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 416px) {
+    .tree-meg-img {
+        max-width: 380px;
+        top: 0;
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+    .about-text {
+        font-size: 16px;
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+    .about-text h2 {
+        line-height: 1.5rem;
+        letter-spacing: 0;
+        padding-bottom: 20px;
+    }
+    .about-below-text {
+        font-size: 16px;
+    }
+    .about-list-playing {
+        padding-right: 0;
+        padding-left: 0;
+        max-width: 200px;
+    }
+    .about-list-fav {
+        padding-left: 0;
+        padding-right: 0;
+        max-width: 200px;
     }
 }
 
@@ -680,9 +881,6 @@ nav{
         font-size: 1.3rem;
         letter-spacing: normal;
     }
-    .about-text {
-        font-size: 1.5vw;
-    }
     .logo {
         padding-right: 25vw;
     }
@@ -705,7 +903,7 @@ nav{
         min-height: 60vh;
     }
     .main-name {
-        font-size: 7vw;
+        font-size: 8vw;
         letter-spacing: 0.1rem;
     }
     body {
@@ -743,10 +941,6 @@ nav{
         position: absolute;
         top: 2.5vh;
         right: 2vw;
-    }
-
-    .about-text {
-        font-size: 1.8vw;
     }
     .monkey-btn {
         height: 6vh;
@@ -1015,7 +1209,7 @@ iframe {
     }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
     .vid-1, .vid-2 {
         width: 80vw;
         height: 200px;
@@ -1028,92 +1222,6 @@ iframe {
 .flex {
     display: flex;
     gap: var(--gap, 1rem);
-}
-
-
-/* about me pictures  */
-
-.pictures-of-me {
-    position: relative;
-}
-
-.desk-meg-img {
-    width: 100%;
-    height: auto;
-    max-width: 800px;
-    z-index: 4;
-    padding: .3em;
-    border-style: solid;
-    border-width: .3em;
-    border-color: var(--main-color); 
-}
-
-.goth-meg-img {
-    display: none;
-    width: 100%;
-    height: auto;
-    max-width: 360px;
-    padding: .3em;
-    transform: rotate(2deg);
-    border-style: solid;
-    border-width: .3em;
-    border-color: var(--main-color); 
-}
-
-.transparent-img {
-    display: none;
-    opacity: 0;
-    width: 100%;
-    height: auto;
-    max-width: 360px;
-    padding: .6em;
-}
-
-.shark-jinx-img {
-    display: none;
-    position: absolute;
-    top: -4vh;
-    left: 20vw;
-    width: 100%;
-    height: auto;
-    max-width: 360px;
-    transform: rotate(-12deg);
-    padding: .3em;
-    border-style: solid;
-    border-width: .3em;
-    border-color: var(--main-color); 
-    z-index: 99;
-}
-
-.me-doodle {
-    display: none;
-    position: absolute;
-    top: -25vh;
-    left: 31vw;
-    height: 40vh;
-    transform: rotate(7deg);
-    z-index: 999;
-}
-
-@media screen and (max-width:1400px){
-    .goth-meg-img {
-        max-width: 320px;
-    }
-    .transparent-img {
-        max-width: 320px;
-    }
-    .shark-jinx-img {
-        top: -2vh;
-        left: 18vw;
-        max-width: 320px;
-    }
-
-    .me-doodle {
-    top: -15vh;
-    left: 33vw;
-    height: 25vh;
-    transform: rotate(0deg);
-    }
 }
 
 /* mark stuff */
@@ -1265,7 +1373,7 @@ mark.purple {
     filter: invert(62%) sepia(68%) saturate(5517%) hue-rotate(309deg) brightness(107%) contrast(104%) grayscale(0%) drop-shadow(2px 2px 8px #FF4F9B);
 }
 
-.jinxMode .desk-meg-img {
+.jinxMode .tree-meg-img {
     display: none;
 }
 
